horizontal scrolling fixed

--- a/css/style.css
+++ b/css/style.css
@@ -6459,72 +6459,6 @@ subscription {
 .bg-black {
   background-color: #111111;
 }
-a {
-  -webkit-transition: all 0.2s ease-in-out;
-  -moz-transition: all 0.2s ease-in-out;
-  -ms-transition: all 0.2s ease-in-out;
-  -o-transition: all 0.2s ease-in-out;
-  transition: all 0.2s ease-in-out;
-}
-hr {
-  margin-top: 40px;
-  margin-bottom: 40px;
-}
-body {
-  font-weight: 300;
-  background-color: #1f1f1f;
-  overflow-x: hidden;
-  max-width: 100%;
-}
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-.h1,
-.h2,
-.h3,
-.h4,
-.h5,
-.h6 {
-  font-weight: 300;
-}
-.share-buttons {
-  zoom: 1;
-  max-width: 100%;
-  margin: 3em auto;
-  font-size: 2em;
-}
-.share-buttons:before,
-.share-buttons:after {
-  content: "";
-  display: table;
-}
-.share-buttons:after {
-  clear: both;
-}
-.share-buttons .share-button {
-  width: 100%;
-}
-.share-buttons .share-button iframe {
-  width: 100%;
-  height: 2.45em;
-}
-iframe {
-  overflow: hidden;
-  margin-bottom: 5px;
-  border: 0px;
-}
-iframe[seamless] {
-  overflow: hidden;
-}
-.gradient-background {
-  background-image: -webkit-linear-gradient(left bottom, #462667, #9c75c3);
-  background-image: -moz-linear-gradient(left bottom, #462667, #9c75c3);
-  background-image: -o-linear-gradient(left bottom, #462667, #9c75c3);
-  background-image: -ms-linear-gradient(left bottom, #462667, #9c75c3);
-}
 .jumbotron {
   margin-bottom: 0px;
 }
@@ -6574,8 +6508,49 @@ iframe[seamless] {
   background-color: #ffffff;
   border-color: #ffffff;
 }
+body {
+  font-weight: 300;
+  background-color: #1f1f1f;
+  overflow-x: hidden;
+  max-width: 100%;
+}
+html {
+  overflow-x: hidden;
+  max-width: 100%;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+.h1,
+.h2,
+.h3,
+.h4,
+.h5,
+.h6 {
+  font-weight: 300;
+}
+a {
+  -webkit-transition: all 0.2s ease-in-out;
+  -moz-transition: all 0.2s ease-in-out;
+  -ms-transition: all 0.2s ease-in-out;
+  -o-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+}
+hr {
+  margin-top: 40px;
+  margin-bottom: 40px;
+}
+.gradient-background {
+  background-image: -webkit-linear-gradient(left bottom, #462667, #9c75c3);
+  background-image: -moz-linear-gradient(left bottom, #462667, #9c75c3);
+  background-image: -o-linear-gradient(left bottom, #462667, #9c75c3);
+  background-image: -ms-linear-gradient(left bottom, #462667, #9c75c3);
+}
 p {
-  font-family: 'Source Sans Pro', sans-serif;
+  font-family: "Open Sans", Helvetica, Arial, sans-serif;
   font-size: 16px;
   color: white;
   text-align: center;
