--- a/css/tooltip_skin_movie.css
+++ b/css/tooltip_skin_movie.css
@@ -66,14 +66,15 @@
 	position: relative;
 	background: url("../img/fantastic-beasts-op.jpg") top center;
 	background-size: cover;
-	padding-bottom: 100px;}
+	padding-bottom: 100px;
+text-align: center;}
 
 .entertain .sky-carousel {
-	width: 100%;
+	width: 80%;
 	height: 500px;
-	position: relative;
+
 	/*border: 1px solid #dbdbdb;*/
-	/*background: red;*/
+
 	overflow: hidden;
 	margin: 0 auto;
 }
@@ -107,60 +108,7 @@
 	-moz-box-shadow: 0px 2px 1px rgba(44, 44, 44, 0.07);
 }
 
-/*.sky-carousel .sky-carousel-container .sc-content {*/
-	/*display: none;*/
-/*}*/
 
-/**********************************************
-*
-* 4. Current Content Styles
-*
-**********************************************/
-/*.sky-carousel .sc-content-wrapper {*/
-	/*position: absolute;*/
-	/*text-align: center;*/
-	/*top: 7%;*/
-	/*left: 50%;*/
-	/*z-index: 4999;*/
-/*}*/
-
-/*.sky-carousel .sc-content-container {*/
-	/*position: relative;*/
-	/*left: -50%;*/
-	/*font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;*/
-	/*padding: 0;*/
-/*}*/
-
-
-/*.sky-carousel .sc-content-wrapper .sc-content-container .sc-content {*/
-	/*background-color: #252525;*/
-	/*-webkit-border-radius: 3px;*/
-	/*-moz-border-radius: 3px;*/
-	/*border-radius: 3px;*/
-	/*padding: 14px;*/
-	/*background-image: linear-gradient(top, rgb(61,61,61) 0%, rgb(33,33,33) 100%);*/
-	/*background-image: -o-linear-gradient(top, rgb(61,61,61) 0%, rgb(33,33,33) 100%);*/
-	/*background-image: -moz-linear-gradient(top, rgb(61,61,61) 0%, rgb(33,33,33) 100%);*/
-	/*background-image: -webkit-linear-gradient(top, rgb(61,61,61) 0%, rgb(33,33,33) 100%);*/
-	/*background-image: -ms-linear-gradient(top, rgb(61,61,61) 0%, rgb(33,33,33) 100%);*/
-	/*background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, rgb(61,61,61)), color-stop(1, rgb(33,33,33)));*/
-	/*box-shadow: 0px 2px 1px rgba(44, 44, 44, 0.1);*/
-	/*-webkit-box-shadow: 0px 2px 1px rgba(44, 44, 44, 0.1);*/
-	/*-moz-box-shadow: 0px 2px 1px rgba(44, 44, 44, 0.1);*/
-	/*min-width: 240px;*/
-/*}*/
-
-/*.sky-carousel .sc-content-wrapper .sc-content-container:after {*/
-	/*position: absolute;*/
-	/*display: block;*/
-	/*content: "";*/
-	/*border: solid 10px transparent;*/
-	/*border-top: solid 10px #212121;*/
-	/*width: 0;*/
-	/*height: 0;*/
-	/*left: 50%;*/
-	/*margin-left: -10px;	*/
-/*}*/
 
 .entertain .sky-carousel .sc-content-wrapper h2 {
 	color: #fff;
